# robolocks

./: .gitignore  .vercelignore  CMakeLists.txt  README.md  vercel.json
.superpowers/sdd/: task-5-report.md
cmake/: Dependencies.cmake
docs/architecture/: engine-boundary.md  replay-schema.md
docs/bots/: arena-guide.md  bot-system.md  deploy-bot.md  writing-bots.md
docs/superpowers/plans/: 2026-07-06-robolocks-engine-skeleton.md  2026-07-09-p1-contract-unification.md  2026-07-09-p2-engine-internals.md  2026-07-09-p3-web-refactor.md  2026-07-09-p4-ui-redesign.md
docs/superpowers/specs/: 2026-07-06-robolocks-mvp-design.md  2026-07-10-battle-field-editor-B-design.md  2026-07-10-research-setup-config-A-design.md
engine/cli/: main.cpp
engine/include/robolocks/: actuator_system.hpp  battle_config.hpp  battle_loader.hpp  battle_runner.hpp  battle_runtime.hpp  battle_simulation.hpp  battlefield.hpp  bot_controller.hpp  builtin_controllers.hpp  c_api.h  combat_resolution.hpp  command.hpp  controller_factory.hpp  controller_protocol_json.hpp  intent_state.hpp  json_callback_bot_controller.hpp  json_field.hpp  match.hpp  match_config.hpp  math.hpp  observation.hpp  order.hpp  order_resolution.hpp  physics_system.hpp  presets.hpp  projectile_system.hpp  python_bot_controller.hpp  runtime_state.hpp  sensor_system.hpp  snapshot.hpp  snapshot_json.hpp  step_result.hpp  types.hpp  version.hpp
engine/src/: actuator_system.cpp  battle_loader.cpp  battle_runner.cpp  battle_runtime.cpp  battle_simulation.cpp  battlefield.cpp  builtin_controllers.cpp  c_api.cpp  combat_resolution.cpp  controller_factory.cpp  controller_protocol_json.cpp  intent_state.cpp  json_callback_bot_controller.cpp  json_field.cpp  match.cpp  math.cpp  order_resolution.cpp  physics_system.cpp  presets.cpp  projectile_system.cpp  python_bot_controller.cpp  sensor_system.cpp  snapshot_json.cpp  version.cpp
engine/tests/: actuator_system_test.cpp  battle_loader_test.cpp  battle_runner_test.cpp  battle_runtime_test.cpp  battle_simulation_test.cpp  battlefield_test.cpp  c_api_test.cpp  cli_replay_test.cmake  cli_stream_test.cmake  command_test.cpp  contract_golden_test.cpp  controller_protocol_json_test.cpp  intent_state_test.cpp  json_callback_bot_controller_test.cpp  match_test.cpp  math_test.cpp  order_resolution_test.cpp  order_test.cpp  physics_system_test.cpp  projectile_system_test.cpp  python_bot_controller_test.cpp  sensor_system_test.cpp  snapshot_json_test.cpp  version_test.cpp
engine/wasm/: README.md  wasm_exports.cpp
examples/bots/: hold_line_blue.py  robolocks_bot.py
fixtures/contracts/: frame.golden.json  observation.golden.json
fixtures/maps/: duel_grid_v0.json
fixtures/matches/: catalog_duel_v0.json  howitzer_duel_v0.json  invalid_implicit_body_shape_v0.json  invalid_unknown_module_v0.json  preset_duel_python_v0.json  preset_duel_v0.json
fixtures/modules/: tank_modules_v0.json
fixtures/replays/: howitzer_duel_v0.replay.json  preset_duel_python_v0.replay.json  test.replay.json
scripts/: build-cli.sh  build-wasm.sh  build.sh  regen-replay-fixtures.sh  sync-wasm.mjs
sdk/python/robolocks/: __init__.py  geometry.py  orders.py  runtime.py  spec.py  state.py
sdk/python/tests/: test_contract.py  test_runtime.py
web/: components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/replays/: howitzer_duel_v0.replay.json  preset_duel_python_v0.replay.json
web/public/wasm/: robolocks_wasm.wasm
web/scripts/: copy-pyodide.mjs  gen-python-sdk.mjs
web/src/: main.ts
web/src/arena/: arena.ts  arenaWorker.ts  arenaWorkerProtocol.ts
web/src/components/ui/: accordion.tsx  button.tsx  input.tsx  label.tsx  tabs.tsx
web/src/hangar/: hangar.ts  hangarWorker.ts  hangarWorkerProtocol.ts  pythonSdkFiles.generated.ts
web/src/replay/: frameParsing.ts  replay.ts
web/src/research/: research.ts  researchWorker.ts  researchWorkerProtocol.ts
web/src/sim/: kernelAdapter.ts  simWorker.ts
web/src/types/: protocol.ts
web/src/ui/: BattleFieldEditor.tsx  BattleSceneThreeView.tsx  BattlefieldThreeView.tsx  BotConsole.tsx  CodeEditor.tsx  Inspector.tsx  PlaybackControls.tsx  RuleSummary.tsx  app.ts  app.tsx  battleSceneThreeScene.ts  battlefieldRenderer.ts  battlefieldThreeScene.ts  statusText.ts  styles.css  teamPalette.ts  unitFormat.ts
web/src/ui/hooks/: useArenaRun.ts  useHangarRun.ts  usePanelResize.ts  useReplayPlayback.ts  useResearchRun.ts
web/tests/: app.test.mjs  arena.test.mjs  arenaWorkerProtocol.test.mjs  battleSceneThreeScene.test.mjs  battlefieldRenderer.test.mjs  contract.test.mjs  hangar.test.mjs  hangarWorkerProtocol.test.mjs  kernelAdapter.test.mjs  pythonSdkFiles.test.mjs  replay.test.mjs  research.test.mjs  researchWorkerProtocol.test.mjs  statusText.test.mjs  teamPalette.test.mjs  unitFormat.test.mjs  usePanelResize.test.mjs  useReplayPlayback.test.mjs
